bin_PROGRAMS = aprspruner
aprspruner_SOURCES = \
                     App.cpp \
                     DBI.cpp \
                     main.cpp \
                     MemcachedController.cpp \
                     Store.cpp \
                     Worker.cpp

aprspruner_LDFLAGS=-export-dynamic -lmysqlpp
